--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,15 @@
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
+    <script>
+      window.addEventListener('scroll', function(ev) {
+          document.body.toggleAttribute('scroll', true)
+          this.timer && clearTimeout(this.timer)
+          this.timer = setTimeout(() => {
+              document.body.toggleAttribute('scroll')
+          }, 500)
+      });
+    </script>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
